assets/stylesheets/application.css.scss
//= require semantic-ui/dist/semantic

$form_left_padding: 0px !important;
$form_right_padding: 0px !important;
$mobile-max-width: 420px;

@media only screen and (max-width: $mobile-max-width) {
  #select_organisation_button {
    width: 100%;
  }

  #reset_idp_selection_button {
    width: 100%;
  }

  #sp_header {
    padding-left: 0px;
  }

  #tab_menu a.can_hide {
    display: none;
  }
}

#search_options {
  display: none;
}

#select_organisation_button {
  display: none;
}

#tab_menu {
  min-height: 0;
  height: 0;
}

#search_column {
  padding-left: $form_left_padding;
  padding-right: $form_right_padding;
}

#idp_selection_table {
  border: 0px !important;
}

#idp_selection_table thead {
  white-space: nowrap;
  display: none;
}

#idp_selection_table thead tr {
  white-space: nowrap;
  display: none;
}

#idp_selection_table thead th {
  white-space: nowrap;
  display: none;
}

#idp_selection_table tbody tr {
  border-right: 0 !important;
  border-left: 0 !important;
}

#idp_selection_table tbody td {
  border-right: 0 !important;
  border-left: 0 !important;
}

#idp_reset_selection_table tbody tr {
  border-right: 0 !important;
  border-left: 0 !important;
}

#idp_reset_selection_table tbody td {
  border-right: 0 !important;
  border-left: 0 !important;
  padding-left: 1em;
  padding-right: 1em;
}

#scroller {
  padding-top: 0px;
}

.ui.table:not(.unstackable) td:first-child em {
  font-weight: initial;
}

.distance {
  display: none;
}

.select_organisation_input {
  display: none;
}

